# fakecookieclicker

./: main.py  pyproject.toml
