[tool.poetry]
name = "repl_pygame_fakeCookieClicker"
version = "0.1.0"
description = "fake cookie clicker"
authors = ["twotoque <Creepersrock28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
